--- a/css/estilo.css
+++ b/css/estilo.css
@@ -35,6 +35,7 @@ img{
     max-width: 75em;
     height: 100%;
     margin: auto;
+    /* background-color: aliceblue; */
 }
 .flex-spbt-center{
     display: flex;
@@ -212,7 +213,7 @@ img{
 .partida{
     display: flex;
     align-items: center;
-    margin-right: 2.5em;
+    /* margin-right: 2.5em; */
 }
 
 .partida p{
@@ -221,7 +222,7 @@ img{
 }
 
 .partida img{
-    width: 2em;
+    width: 3em;
 }
 
 .time1, .time2{
@@ -233,6 +234,10 @@ img{
     color: #fff;
 }
 
+.time2 p{
+    margin-right: 1em;
+}
+
 .time1 img{
     margin-left: 0.5em;
 }
@@ -241,12 +246,15 @@ img{
     margin-right: 0.5em;
 }
 
-.divisao{
-    background-color: aliceblue;
-    height: 70%;
-    width: 1px;
-    margin-right: 4em;
+
+.games-aovivo::after{
+    content: '';
+    border: solid 1px #fff;
+    height: 2em;
+    margin-left: 0.5em;
 }
+
+
 
 /* notícias */
 .noticias{
@@ -255,16 +263,19 @@ img{
     background-color: #1E1C21;
 }
 
+
+
 .container-noticias{
     display: flex;
     justify-content: space-between;
     /* background-color: red; */
+    height: 100%;
 }
 
 .noticias-artigos{
     /* font-size: 1.875em; */
     /* background-color: aliceblue; */
-    width: 75%;
+    width: 70%;
 }
 
 .noticias-artigos h3{
@@ -277,12 +288,14 @@ img{
 .artigo{
     width: 14.8125em;
     height: 22.75em;
-    background-color: blue;
+    /* background-color: blue; */
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center ;
     margin-bottom: 1.5em;
+    box-shadow: 1px 1px 20px 4px #000000;
+    background: linear-gradient(0deg, #000000 0%, rgba(83, 83, 83, 0.577381) 25%, rgba(196, 196, 196, 0) 87.5%);
 }
 
 .posicionamento-artigos{
@@ -293,21 +306,79 @@ img{
 }
 
 .content-artigo{
-    width: 85%;
-    background-color: red;
+    width: 90%;
+    /* background-color: red; */
 
 }
 
 .artigo h4{
-    font-size: 1.1em;
+    margin-top: 0.7em;
+    font-size: 1.2em;
+    color: #fff;
 }
 .artigo p{
+    margin-top: 0.5em;
     font-size: 0.9em;
+    color: #fff;
+}
+
+.container-cronograma{
+    width: 30%;
+    display: flex;
+    align-items: center;
+    /* background-color: blue; */
+    
 }
 
 .cronograma{
-    width: 25%;
-    /* background-color: blue; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-left: 4em;
+    width: 14.8125em;
+    height: 46.9375em;
+    box-shadow: 1px 1px 20px 4px #000000;
+    background:  linear-gradient(180deg, #000000 0%, rgba(83, 83, 83, 0.577381) 25%, rgba(196, 196, 196, 0) 87.5%, #000000 100%);
+    justify-content: space-around;
+}
+
+.partida-cronograma{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.partida-cronograma p{
+    color: #fff;
+}
+
+.times{
+    display: flex;
+    align-items: center;
+    margin-left: 1em;
+}
+
+.times p{
+    color: #fff;
+}
+
+.times img{
+    width: 4em;
+}
+
+footer{
+    width: 100%;
+    height: 13.125em;
+    background-color: #010101;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer h3{
+    color: #fff;
+    font-size: 3.125em;
 }
 
 
