--- a/css/estilo.css
+++ b/css/estilo.css
@@ -348,6 +348,71 @@ img{
     margin-top: 1em;
 }
 
+.links-footer{
+    display: flex;
+    justify-content: space-around;
+    width: 33%;
+}
+
+.links{
+    color: white;
+}
+
+.links a {
+    text-decoration: none;
+    color: white;
+}
+
+.rodape{
+    padding: 1em;
+}
+
+.logo-rodape{
+    width: 19.06em;
+}
+
+.sociais h2{
+    color: white;
+}
+
+.sociais > h2{
+    font-size: 0.875em;
+    margin-bottom: 0.5em;
+}
+
+.sociais form{
+    display: flex;
+    margin-bottom: 0.5em;
+}
+
+.sociais input[type="email"]{
+    height: 2.3125em;
+    width: 12.1875em;
+}
+
+.sociais input[type="email"]::placeholder{
+    color: #B8b3b3;
+    font-weight: bold;
+    padding-left: 0.3em;
+}
+
+.sociais input[type="submit"]{
+    width: 9.75em;
+    color: white;
+    background-color: #8326ef;
+    font-size: 1.1em;
+}
+
+.siga-nos{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 1.5em;
+}
+
+.siga-nos img{
+    max-width: 3em;
+}
 
 /* Até 1199px */
 @media screen and (max-width: 74.93em){
