--- a/css/estilo.css
+++ b/css/estilo.css
@@ -44,6 +44,7 @@ img{
 .content{
     /* background-color: aqua; */
     width: 95%;
+    max-width: 75em;
     height: 100%;
     margin: auto;
     /* background-color: aliceblue; */
@@ -310,6 +311,7 @@ img{
     color: #fff;
     margin-bottom: 2em;
     box-shadow: 0px 0px 10px rgb(97, 97, 97), 0px 0px 30px rgb(0, 0, 0);
+    margin-bottom: 2em;
 }
 
 .cardnews h3{
@@ -391,6 +393,10 @@ img{
     margin-bottom: 0.5em;
 }
 
+.apenas-375px{
+    display: none;
+}
+
 .sociais form{
     display: flex;
     margin-bottom: 0.5em;
@@ -438,6 +444,10 @@ body{
     background-image: url("../img/Banner1440.jpg");
     background-size: cover;
     /* background-color: red; */
+}
+
+.content-news{
+    justify-content: space-around;
 }
 
 .cardnews{
@@ -506,6 +516,10 @@ body{
     font-size: 7px;
 }
 
+.content{
+    max-width: 83em;
+}
+
 .topo{
     width: 100%;
 }
@@ -556,8 +570,35 @@ body{
 }
 
 #meus-links a{
-    font-size: 1.5em;
+    font-size: 2em;
     padding: 0px;
+}
+
+.games ul{
+    justify-content: space-around;
+}
+
+.games ul a:hover img{
+    transition: 0.5s;
+    transform: scale(1.2);
+}
+
+.container-about{
+    height: 100%;
+}
+
+.content-about{
+    height: 100%;
+}
+
+.text-about{
+    width: 65%;
+    font-size: 1.1em;
+}
+
+.content-about img{
+    width: 35%;
+
 }
 
 .mobile{
@@ -643,9 +684,114 @@ body{
 }
 
 }
-/* Até 576px */
+/* 375px Até 576px */
 @media screen and (max-width: 36em){
 
+body{
+    font-size: 5px;
+}
 
-    
+#meus-links{
+    margin-top: -10px;
+    /* background-color: aliceblue; */
+}
+
+.banner{
+    height: 300px;
+    background-image: url("../img/Banner576.jpg");
+    background-size: cover;
+    background-position: left;
+}
+
+.banner-container{
+    background-color: rgba(19, 18, 18, 0.35);
+}
+
+.banner-content{
+    justify-content: center;
+}
+.banner-text{
+    font-size: 1.7em;
+    width: auto;
+}
+
+.banner-text h1, .banner-text p{
+
+    /* text-shadow: 0 0 10px #000000; */
+}
+
+.text-about h2{
+    margin-bottom: -0.01em;
+}
+
+.games{
+    font-size: 1.2em;
+}
+
+.games img{
+    max-width: 11em;
+}
+
+.container-about img{
+    display: none;
+}
+
+.text-about{
+    width: 100%;
+    font-size: 1.4em;
+}
+
+.divisao{
+    height: 1px;
+    width: 100%;
+}
+
+.flex-colunm-mobile{
+    height: 15em;
+}
+
+.partida p{
+    font-size: 1em;
+}
+
+.flex-colunm-mobile > .flex-spbt-center{
+    flex-direction: column;
+}
+
+.news h2{
+    font-size: 3em;
+}
+
+.content-news{
+    height: 110em;
+    font-size: 1.3em;
+    justify-content: space-between;
+}
+
+.cardnews{
+    width: 45%;
+    height: 33em;
+}
+
+.next-games h2{
+    font-size: 3em;
+}
+
+.next-games-bg{
+    font-size: 1.2em;
+    width: 95%;
+}
+
+.links-footer{
+    font-size: 1.5em;
+}
+
+.sociais > h2{
+    font-size: 1.3em;
+}
+
+.apenas-375px{
+    display: flex;
+}
+  
 }
